samples/_failures_safe/1761402134_ff178d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d4f3a261.c: In function ‘main’:
./samples/SAFE/__tmp_d4f3a261.c:145:16: error: missing terminating " character
  145 |         printf("Compression test failed\n
      |                ^~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_d4f3a261.c:145:9: error: expected expression at end of input
  145 |         printf("Compression test failed\n
      |         ^~~~~~
./samples/SAFE/__tmp_d4f3a261.c:145:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d4f3a261.c:145:9: error: expected declaration or statement at end of input
